try to fix differencies on ios

--- a/frontend/src/Components/Pages/HomePage/HomePage.scss
+++ b/frontend/src/Components/Pages/HomePage/HomePage.scss
@@ -46,7 +46,7 @@ $tablet-st: 1.5;
      gap: 16px;
      background-position: top left;
      background-size: 234%;
-     margin: 0;
+     margin: auto;
      padding: 16px 16px 0;
    }
 
